added support for remunerator offsets
