# server/routes.ts
@@ -6,6 +6,7 @@ import invitesRouter from './api/controllers/invites/router';
 import updatesRouter from './api/controllers/updates/router';
 import imagesRouter from './api/controllers/images/router';
 import healthRouter from './api/controllers/health/router';
+import remuneratorRouter from './api/controllers/remunerator/router';
 
 export default function routes(app: Application): void {
   app.use('/api/v1/bills', entryRouter);
@@ -15,6 +16,7 @@ export default function routes(app: Application): void {
   app.use('/api/v1/login', loginRouter);
   app.use('/api/v1/logout', logoutRouter);
   app.use('/api/v1/images', imagesRouter);
+  app.use('/api/v1/remunerator', remuneratorRouter);
   app.use('/health', healthRouter);
   app.use('/', oauthRouter)
   ;
